--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version-file: '.tool-versions'
+          node-version-file: ".tool-versions"
       - name: Cache node modules
         id: cache-npm
         uses: actions/cache@v3
@@ -35,3 +35,5 @@ jobs:
         run: npm install
       - name: Compile Code
         run: npm run build
+      - name: Lint
+        run: npm run lint
