--- a/package.json
+++ b/package.json
@@ -30,17 +30,17 @@
   "scripts": {
     "build": "tsc",
     "bundle": "npm run build && rollup -c",
-    "lint": "npx prettier --check .",
-    "prettier": "prettier . --write"
+    "lint": "npx @biomejs/biome check src",
+    "format": "npx @biomejs/biome check --apply src"
   },
   "dependencies": {
     "lit": "^3.1.3",
     "tslib": "^2.5.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.7.3",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@types/google.maps": "^3.55.8",
-    "prettier": "3.2.5",
     "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2",
     "typescript": "^5.4.5"
