--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@rollup/plugin-node-resolve": "^16.0.0",
+    "@rollup/plugin-terser": "^0.4.4",
     "@types/google.maps": "^3.55.8",
     "rollup": "^4.38.0",
-    "rollup-plugin-terser": "^7.0.2",
     "typescript": "^5.4.5"
   }
 }
